reorganize classes into different packages